# vflldoku

./: README.md  hooks.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
.pub_min_cache/: .cached_files_list.yml
docs/: aufgaben.md  bbb.md  dashboard.md  documents.md  index.md  nextcloud.md  polls.md  profiles.md  teams.md  zoom.md
